# MIDT

./: LICENSE  README.md  README.mmd
contract/: Anchor.toml
contract/programs/secure_medical_records/: Cargo.toml
contract/programs/secure_medical_records/src/: lib.rs
contract/tests/: secure_medical_records.ts
docs/: Master Plan for Secure Medical Records.md  Smart Contract Implementation Details.md
examples/: SecureMedicalRecords.sol
